# AQA

./: CODE_REVIEW.md  Dockerfile  PROTOCOL_v2.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
aqa/: __init__.py  __main__.py
aqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aqa/agent/: __init__.py  base.py  judge.py  probe.py  reporter.py  supervisor.py
aqa/core/: __init__.py  config.py  dlq.py  engine.py  message.py  security.py
aqa/plugin/: __init__.py  base.py  registry.py
aqa/plugins/: __init__.py  scorer.py  trace_collector.py  validator.py
aqa/transport/: __init__.py  base.py  kafka_transport.py  redis_streams.py
examples/: demo.py
sdk/: README.md  pyproject.toml
sdk/aqa_sdk/: __init__.py  consumer.py  message.py
sdk/aqa_sdk/bridge/: __init__.py
sdk/examples/: go_agent.go  js_agent.mjs
sdk/tests/: test_sdk.py
tests/: conftest.py  test_aqa.py
